# code-forces-solutions

./: .gitignore  4_a_watermelon.c  71_a_way_too_long_words.c  A_Theatre_Square.c  README.md
c/: C-README.md
c-plus-plus/p-110A-nearly-lucky-number/: nearly-lucky-number.cpp
c-plus-plus/p-112a-petya-and-string/: petya.cpp
c-plus-plus/p-116a-tram/: p-116a-tram.cpp
c-plus-plus/p-1304a-two-rabbits/: two-rabbits.cpp
c-plus-plus/p-1407a-ahahahahahahahaha/: ahah.cpp
c-plus-plus/p-1463a-dungeon/: dungeon.cpp
c-plus-plus/p-1468e-four-segments/: four-segments.cpp
c-plus-plus/p-1468n-waste-sorting/: waste-sorting.cpp
c-plus-plus/p-1469a-regular-bracket-sequence/: p-1469A-regular-bracket-sequence.cpp
c-plus-plus/p-158a-next-round/: next-round.cpp
c-plus-plus/p-263a-beautiful-matrix/: beautiful-matrix.cpp
c-plus-plus/p-263a-boy-or-girl/: boy-or-girl.cpp
c-plus-plus/p-266a-stones-on-the-table/: stones-on-the-table.cpp
c-plus-plus/p-271a-beautfiul-year/: beatiful-year.cpp
c-plus-plus/p-281a-word-capitalization/: word-capitalization.cpp
c-plus-plus/p-2822a-bit/: bit.cpp
c-plus-plus/p-339a-helpful-maths/: helpful-maths.cpp
c-plus-plus/p-384a-coder/: coder.cpp
c-plus-plus/p-41a-translation/: translation.cpp
c-plus-plus/p-467a/: george-and-accommodation.cpp
c-plus-plus/p-50a-domino-piling/: domino-piling.cpp
c-plus-plus/p-59a-word/: word.cpp
problem-0231-a/: makefile  problem_231_a_team.c
problems/0151/a/: CMakeLists.txt
problems/0151/a/source/: soft_drinking.cpp  soft_drinking.h
problems/0151/a/tests/: test_soft_drinking.cpp
(+88 files in other folders)
